--- a/app/views/irm/home/index.html.erb
+++ b/app/views/irm/home/index.html.erb
@@ -50,6 +50,13 @@
                 <tr>
                   <td colspan="2">
                     <div class="tools-content-right">
+                      <%= my_change_tasks %>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td colspan="2">
+                    <div class="tools-content-right">
                     </div>
                   </td>
                 </tr>
