--- a/app/views/chm/change_approvals/_approvals.html.erb
+++ b/app/views/chm/change_approvals/_approvals.html.erb
@@ -1,3 +1,5 @@
+
+<% deletable = !@change_request.approve_status.present?||"ASSIGNED".eql?(@change_request.approve_status) %>
 <%= detail_data_table(datas.length) do %>
   <!--  irm datatable      -->
   <div class="irm-datatable">
@@ -8,7 +10,7 @@
               <th style="width:40px">
                 <div><%= t(:operation) %></div>
               </th>
-              <th>
+              <th style="width:60px">
                 <div><%= t(:label_irm_person_full_name) %></div>
               </th>
               <th>
@@ -17,6 +19,12 @@
               <th>
                 <div><%= t(:label_irm_person_email_address) %></div>
               </th>
+              <th style="width:80px">
+                <div><%= t(:label_chm_change_approval_approve_status) %></div>
+              </th>
+              <th style="width:180px">
+                <div><%= t(:label_chm_change_approval_approve_at) %></div>
+              </th>
             </tr>
           </thead>
           <tbody>
@@ -24,7 +32,11 @@
                 <tr id="<%=data[:id]%>">
                   <td>
                     <div>
-                      <%= link_to t(:delete),{:controller => "chm/change_approvals",:id=>data.id,:action => "destroy"} ,{:back=>true,:method => :delete,:confirm => t(:label_are_you_sure) } %>
+                      <% if deletable%>
+                        <%= link_to t(:delete),{:controller => "chm/change_approvals",:id=>data.id,:action => "destroy"} ,{:back=>true,:method => :delete,:confirm => t(:label_are_you_sure) } %>
+                      <% elsif data.approve_able?(Irm::Person.current) %>
+                          <%= link_to t(:label_chm_change_approval_approve),{:controller => "chm/change_approvals",:id=>data.id,:action => "approve"} ,{:back=>true } %>
+                      <% end %>
                     </div>
                   </td>
                   <td>
@@ -40,6 +52,16 @@
                   <td>
                     <div>
                       <%= data[:email_address] %>
+                    </div>
+                  </td>
+                  <td>
+                    <div>
+                      <%= data[:approve_status_name] %>
+                    </div>
+                  </td>
+                  <td>
+                    <div>
+                      <%= format_date(data[:approve_at]) %>
                     </div>
                   </td>
                 </tr>
