合并用户首页待办事项

--- a/app/views/irm/home/_my_tasks.html.erb
+++ b/app/views/irm/home/_my_tasks.html.erb
@@ -7,7 +7,7 @@
           <td id="topButtonRow" class="pbButton">
           </td>
           <td class="pbHelp">
-            <%= blank_select_tag(:task_entry,my_task_entries,params[:task_entry],{:id=>"myTaskEntryType"}) %>
+            <div><%= t(:label_irm_task_type) %>:<%= blank_select_tag(:task_entry,my_task_entries,params[:task_entry],{:id=>"myTaskEntryType"}) %></div>
           </td>
         </tr>
       </tbody>
