--- a/app/views/csi/survey_subjects/_common.html.erb
+++ b/app/views/csi/survey_subjects/_common.html.erb
@@ -9,3 +9,21 @@
     var delele_link_text = "<%= t(:delete) %>";
     var other_text = "<%= t(:label_csi_survey_subjects_other) %>";
 </script>
+<style type="text/css">
+  .stringSubject{
+      border:1px dashed gray;
+      cursor:default;
+      padding:2px 3px;
+      vertical-align:top;
+      margin-bottom: 5px;
+  }
+  .textSubject{
+      height:7em;
+      width:35em;
+      border:1px dashed gray;
+      cursor:default;
+      padding:2px 3px;
+      vertical-align:top;
+      margin-bottom:5px;
+  }
+</style>
