--- a/app/views/csi/survey_subjects/_string_form.html.erb
+++ b/app/views/csi/survey_subjects/_string_form.html.erb
@@ -1,4 +1,3 @@
 <input type="text" value="<%= t(:label_csi_survey_users_short_answer) %>"
        disabled="true" name="undefined"
-       style="border:1px dashed gray;cursor:default;padding:2px 3px;vertical-align:top;
-               margin-bottom: 5px;">
+       class="stringSubject">
