--- a/app/views/csi/survey_subjects/_subject_form.html.erb
+++ b/app/views/csi/survey_subjects/_subject_form.html.erb
@@ -1,13 +1,10 @@
 <div class="pbBody">
-    <%= form.hidden_field :uuid %>
-    <%= form.hidden_field :survey_id,:value=>@survey_id%>
-    <%= hidden_field_tag :return_url,@return_url%>
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
               <td class="labelCol"><label><%=t(:label_csi_survey_subject_seq_num)%></label></td>
-              <td class="dataCol"><%= form.text_field :seq_num,:size=>5 %></td>
+              <td class="dataCol"><%= form.text_field :display_sequence,:size=>5 %></td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=t(:label_csi_survey_subject_title)%></label></td>
@@ -16,13 +13,13 @@
             </tr>
             <tr>
               <td class="labelCol"><label><%=t(:label_csi_survey_subject_prompt)%></label></td>
-              <td class="dataCol"><%= form.text_field :prompt %></td>
+              <td class="dataCol"><%= form.text_field :description %></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=t(:label_csi_survey_subject_input_type)%></label></td>
-              <td class="dataCol"><%= form.select :input_type, Csi::SurveySubject::TYPES.map{|h| [t(h[0]), h[1]]},{},
+              <td class="dataCol"><%= form.select :input_type, survey_subject_type,{},
                     :onchange => "subject_input_changed(this);" ,:id=>"id_input_type",:selected=>"text"%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
@@ -32,7 +29,7 @@
               <td class="surveydataCol">
                 <div id="input_options" class="input_options">
                     <%= render :partial => "/csi/survey_subjects/#{subject.input_type}_form",
-                               :locals => {:subject => subject,:parent => parent} %>
+                               :locals => {:subject => subject,:parent => parent,:form=>form} %>
                 </div>
               </td>
             </tr>
