--- a/app/views/irm/search/_box.html.erb
+++ b/app/views/irm/search/_box.html.erb
@@ -1,4 +1,5 @@
 <%=form_tag({:controller=>"irm/search",:action=>"index"},{:id=>"phSearchForm"})  do |f| %>
+  <%= hidden_field_tag :search_option_str, "", {:id => "searchOptionStr"} %>
   <div id="phSearchContainer" class="headerSearchContainer">
     <div class="headerSearchLeftRoundedCorner">
       <div class="searchBoxClearContainer">
@@ -8,12 +9,58 @@
         <%= submit_tag(t(:search),:id=>"phSearchButton") %>
       </div>
     </div>
-    <div id="searchOptionsContainer" class="headerSearchOptions" style="display:none;">
-      <a href="javascript:void(0);" id="headerSearchOptionsLink" class="headerSearchOptionsLink"><%= t(:options) %></a>
+    <div id="searchOptionsContainer" class="headerSearchOptions">
+      <a href="#searchOptions" id="headerSearchOptionsLink" class="headerSearchOptionsLink"><%= t(:options) %></a>
     </div>
   </div>
 <% end %>
-<link rel="stylesheet" type="text/css" href="/themes/salesforce2/stylesheets/custom_yui_container_skin.css"></link>
+
+<div style="display:none;">
+<div id="searchOptions" style="background-color: #fff; width: 300px; height:200px;padding: 10px;">
+  <div style="margin-right:5px;margin-bottom:5px">
+    <%= text_field_tag "search_option_input", t(:input_keyword_you_want_to_search),:id=>"phSearchOptionInput", :class => "grayTips", :style => "width:100%" %>
+  </div>
+  <fieldset>
+  <table style="font-size:12px;width:100%;">
+    <tr><td><%= check_box_tag("search_option_all", "ALL", true,{:id => "checkAllSearchOptions", :class => "searchOptions"}) %>
+      <label for="checkAllSearchOptions"><%= t :all %></label>
+      </td>
+    </tr>
+    <tr><td><%= check_box_tag("search_option_skm_entry", Skm::EntryHeader.name, true, :class => "searchOptions") %>
+      <label for="search_option_skm_entry"><%= t :label_skm_entry_header %></label>
+      </td>
+      <td><%= check_box_tag("search_option_chm_change_request", Chm::ChangeRequest.name, true, :class => "searchOptions") %>
+      <label for="search_option_chm_change_request"><%= t :label_chm_change_request %></label>
+      </td>
+    </tr>
+    <tr><td><%= check_box_tag("search_option_icm_incident_request", Icm::IncidentRequest.name, true, :class => "searchOptions") %>
+      <label for="search_option_icm_incident_request"><%= t :label_icm_incident_request %></label>
+      </td>
+      <td><%= check_box_tag("search_option_irm_bulletin", Irm::Bulletin.name, true, :class => "searchOptions") %>
+      <label for="search_option_irm_bulletin"><%= t :label_irm_bulletin %></label>
+      </td>
+    </tr>
+    <tr>
+    </tr>
+    <tr>
+    </tr>
+  </table>
+  </fieldset>
+  <table style="width:100%">
+    <tr>
+      <td>
+        <div class="button" style="margin-left:35%;padding-top:10px;">
+          <%= submit_tag(t(:search), :class => "searchOptionSubmit") %>
+        </div>
+        <div class="button" style="padding-top:10px;">
+          <a href="javascript:void(0);" id="searchOptionCancel"><%= t(:cancel) %></a>
+        </div>
+      </td>
+    </tr>
+  </table>
+</div>
+</div>
+
 <script type="text/javascript">
   $(document).ready(function(){
     $("#phSearchInput").keydown(function(e){
@@ -22,4 +69,59 @@
         }
       });
   });
+</script>
+<script type="text/javascript">
+$(document).ready(function(){
+    $("#headerSearchOptionsLink").colorbox({inline:true});
+    $("#searchOptionCancel").click(function(e){
+        $.colorbox.close();
+    });
+    $("#checkAllSearchOptions").click(function(e){
+        $(".searchOptions").each(function(){
+            if($(this).attr("id") != "checkAllSearchOptions" && $("#checkAllSearchOptions:checked").val() !== undefined) {
+                $(this).attr("checked", true);
+            }
+            else if($(this).attr("id") != "checkAllSearchOptions" && $("#checkAllSearchOptions:checked").val() === undefined){
+                $(this).attr("checked", false);
+            }
+        });
+    });
+    $(".searchOptions").click(function(e){
+        $("#searchOptionStr").val("");
+        if(!this.checked){
+            $("#checkAllSearchOptions").attr("checked", false);
+        }
+        $(".searchOptions").each(function(){
+            if(this.checked){
+                $("#searchOptionStr").val($("#searchOptionStr").val() + this.value + " ");
+            }
+        })
+    });
+    $(".searchOptionSubmit").click(function(e){
+        $("#phSearchForm").submit();
+    });
+    $("#phSearchOptionInput").blur(function(e){
+        $("#phSearchInput").val($("#phSearchOptionInput").val());
+    });
+    inputTipText();
+
+});
+
+var g_oldVal = "";
+function inputTipText(){
+    $("input[class*=grayTips]") //所有样式名中含有grayTips的input
+    .each(function(){
+       var oldVal=$(this).val();   //默认的提示性文本
+       g_oldVal = oldVal;
+       $(this)
+       .css({"color":"#888"})  //灰色
+       .focus(function(){
+        if($(this).val()!=oldVal){$(this).css({"color":"#000"})}else{$(this).val("").css({"color":"#888"})}
+       })
+       .blur(function(){
+        if($(this).val()==""){$(this).val(oldVal).css({"color":"#888"})}
+       })
+       .keydown(function(){$(this).css({"color":"#000"})})
+    })
+}
 </script>
