--- a/app/views/irm/search/index.html.erb
+++ b/app/views/irm/search/index.html.erb
@@ -1,5 +1,5 @@
 
-<%= show_search_result(params[:query]) %>
+<%= show_search_result(params[:query], params[:search_option_str]) %>
 <% content_for :sidebar do %>
     <%= render :partial =>"/irm/common/recently_objects" %>
 <% end %>
