--- a/public/themes/default/stylesheets/header.css
+++ b/public/themes/default/stylesheets/header.css
@@ -43,6 +43,10 @@ body#body {
     padding-left: 11px;
 }
 
+a.headerSearchOptionsLink, a.headerSearchOptionsLink:hover{color: #fff; font-size: 0.92em;}
+a.headerSearchOptionsLink{text-decoration: none;}
+a.headerSearchOptionsLink:hover{text-decoration: underline;}
+
 .headerSearchLeftRoundedCorner, .headerSearchRightRoundedCorner, .searchBoxClearContainer {
     border:0 none;
     display:inline-block;
