--- a/public/themes/default/stylesheets/header.ie6.css
+++ b/public/themes/default/stylesheets/header.ie6.css
@@ -42,6 +42,9 @@ body#body {
 .headerSearchLeftRoundedCorner, .headerSearchContainer .headerSearchOptions {
     padding-left: 11px;
 }
+a.headerSearchOptionsLink, a.headerSearchOptionsLink:hover{color: #fff; font-size: 0.92em;}
+a.headerSearchOptionsLink{text-decoration: none;}
+a.headerSearchOptionsLink:hover{text-decoration: underline;}
 
 .headerSearchLeftRoundedCorner, .headerSearchRightRoundedCorner, .searchBoxClearContainer {
     border:0 none;
