fixed: 修正在顶层搜索，搜索选项窗口输入搜索内容直接点击回车，不出现任何结果的BUG

--- a/app/views/irm/search/_box.html.erb
+++ b/app/views/irm/search/_box.html.erb
@@ -116,7 +116,7 @@ $(document).ready(function(){
     $(".searchOptionSubmit").click(function(e){
         $("#phSearchForm").submit();
     });
-    $("#phSearchOptionInput").blur(function(e){
+    $("#phSearchOptionInput").keydown(function(e){
         $("#phSearchInput").val($("#phSearchOptionInput").val());
     });
     $("#phSearchInput").focus(function(e){
